--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,26 @@
 [project]
 name = "zilant-prime-core"
 version = "0.1.0"
-description = "Zilant Prime Core engine"
+description = "Core engine for ZILANT Prime"
 readme = "README.md"
-requires-python = ">=3.9"
+license = { file = "LICENSE" }
 authors = [
-  { name = "QuantumKeyUYU", email = "quantumkey@uyu.com" }
+    { name = "QuantumKeyUYU", email = "your-email@example.com" }
 ]
-
 dependencies = [
-  "cryptography>=41.0.0",
-  "numpy>=1.25.0",
-  "scipy>=1.11.0"
+    "cryptography>=40.0.0",
+    "numpy>=1.25.0",
+    "scipy>=1.11.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-  "pytest>=7.0",
-  "flake8>=6.0",
-  "mypy>=1.0",
-  "bandit>=1.7"
+    "pytest",
+    "flake8",
+    "bandit",
+    "mypy",
 ]
 
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
