--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,5 +1,13 @@
+name: Build & Test
+
+on:
+  push:
+    branches: [ main, fix/ci-no-build-isolation ]
+  pull_request:
+    branches: [ main, fix/ci-no-build-isolation ]
+
 jobs:
-  build-and-test:
+  build-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -9,24 +17,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip setuptools wheel
-          pip install .[dev]
+      - name: Upgrade pip, setuptools, wheel
+        run: pip install --upgrade pip setuptools wheel
+
+      - name: Strip BOM from pyproject.toml
+        run: python strip_bom.py pyproject.toml
+
+      - name: Install dev dependencies
+        run: pip install .[dev] --no-build-isolation
 
       - name: Run tests
         run: pytest --maxfail=1 --disable-warnings -q
-
-      - name: Lint with flake8
-        run: flake8 .
-
-      - name: Security scan with bandit
-        run: bandit -r src
-
-      - name: Quality checks
-        run: mypy src
