--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,38 @@
-name: Lint & Security Checks
+name: Lint & Security
 
 on:
   push:
-    branches:
-      - main
-      - fix/ci-no-build-isolation
+    branches: [ main, fix/ci-no-build-isolation ]
   pull_request:
-    branches:
-      - main
-      - fix/ci-no-build-isolation
+    branches: [ main, fix/ci-no-build-isolation ]
 
 jobs:
-  lint-and-security:
+  lint-security:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.9, 3.10, 3.11]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: ${{ matrix.python-version }}
+
+      - name: Upgrade pip, setuptools, wheel
+        run: pip install --upgrade pip setuptools wheel
 
       - name: Install dev dependencies
-        run: pip install -e .[dev] --no-build-isolation
+        run: pip install .[dev] --no-build-isolation
 
-      - name: Run flake8
+      - name: Lint with flake8
         run: flake8 .
 
-      - name: Run bandit
+      - name: Security scan with bandit
         run: bandit -r src
 
-      - name: Run mypy
+      - name: Type check with mypy
         run: mypy src
