--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,38 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "zilant-prime-core"
 version = "0.1.0"
-description = "Core engine for ZILANT Prime"
+description = "Core engine for ZILANT Prime™"
 readme = "README.md"
-license = { file = "LICENSE" }
+requires-python = ">=3.9"
+license = { text = "MIT" }
 authors = [
-    { name = "QuantumKeyUYU", email = "your-email@example.com" }
+  { name = "QuantumKeyUYU", email = "quantumkey@uyu.com" }
 ]
 dependencies = [
-    "cryptography>=40.0.0",
-    "numpy>=1.25.0",
-    "scipy>=1.11.0"
+  "cryptography>=41.0.0",
+  "numpy>=1.25.0",
+  "scipy>=1.11.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest",
-    "flake8",
-    "bandit",
-    "mypy",
+  "pytest>=7.0",
+  "flake8>=6.0",
+  "bandit>=1.7",
+  "mypy>=1.0"
 ]
 
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+[tool.flake8]
+max-line-length = 88
+exclude = ["build","dist",".git","__pycache__"]
+
+[tool.mypy]
+strict = true
+files = "src"
+
+[tool.bandit]
+skips = ["B311"]
