--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,10 +1,6 @@
 name: Build & Test
 
-on:
-  push:
-    branches: [ main, fix/ci-no-build-isolation ]
-  pull_request:
-    branches: [ main, fix/ci-no-build-isolation ]
+on: [push, pull_request]
 
 jobs:
   build-test:
@@ -12,24 +8,23 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9, 3.10, 3.11]
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Upgrade pip, setuptools, wheel
         run: pip install --upgrade pip setuptools wheel
-
-      - name: Strip BOM from pyproject.toml
-        run: python strip_bom.py pyproject.toml
-
-      - name: Install dev dependencies
-        run: pip install .[dev] --no-build-isolation
-
+      - name: Install package and dev dependencies
+        run: |
+          pip install -e .
+          pip install -r requirements-dev.txt
       - name: Run tests
         run: pytest --maxfail=1 --disable-warnings -q
+      - name: Lint with flake8
+        run: flake8 src
+      - name: Security scan with bandit
+        run: bandit -r src
+      - name: Type check with mypy
+        run: mypy src
