--- a/.github/workflows/lint-and-security.yml
+++ b/.github/workflows/lint-and-security.yml
@@ -1,4 +1,4 @@
-name: ZILANT Prime CI
+name: Lint & Security Checks
 
 on:
   push:
@@ -6,12 +6,9 @@ on:
   pull_request:
 
 jobs:
-  build-and-test:
-    name: Build & Test on Python ${{ matrix.python-version }}
+  lint-and-security:
+    name: lint-and-security
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout repo
@@ -28,19 +25,17 @@ jobs:
                       f.write_bytes(data[3:])
           PYCODE
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.11
 
-      - name: Upgrade pip & build tools
-        run: python -m pip install --upgrade pip setuptools wheel
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
-      - name: Install dev dependencies
+      - name: Install dev-tools
+        # no-build-isolation на случай, если снова будут проблемы с PEP 517
         run: pip install --no-build-isolation -e .[dev]
-
-      - name: Run tests
-        run: pytest -q
 
       - name: Lint with flake8
         run: python -m flake8
