--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,11 @@
-# Development & CI tools
-pytest>=7.2
-flake8>=6.0
-bandit>=1.7
-mypy>=1.10
-argon2-cffi>=21.3.0
-
+# requirements-dev.txt
+pytest>=8.0.0
+pytest-cov>=5.0.0
+flake8>=7.0.0
+ruff>=0.2.0
+bandit>=1.7.0
+mypy>=1.8.0
+hypothesis>=6.0.0
+argon2-cffi>=23.1.0
+cryptography>=42.0.0
+click>=8.1.0
