--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,38 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
   push:
+    branches: [main]
   pull_request:
 
 jobs:
   build-and-test:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.10, 3.11, 3.12]
-    runs-on: ubuntu-latest
-
+        python-version: [3.10, 3.11, 3.12]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
 
-    - name: Run tests and collect coverage
-      run: pytest --cov=src --cov-report=xml --junitxml=results-${{ matrix.python }}.xml
+      - name: Run tests
+        run: pytest --basetemp=.pytest_temp -q
 
-    - name: Upload test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results-${{ matrix.python }}
-        path: results-${{ matrix.python }}.xml
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-xml-${{ matrix.python }}
-        path: coverage.xml
+      # Если хотите сохранить артефакты (coverage XML, логи и т.п.):
+      - name: Upload test artifacts
+        if: failure()   # только при падении
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-temp
+          path: .pytest_temp
