--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
-name: Publish 📦
+# .github/workflows/release.yml
+name: 📦 Publish
 
 on:
   push:
@@ -9,7 +10,8 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -18,15 +20,13 @@ jobs:
 
       - name: Install build tools
         run: |
-          python -m pip install --upgrade pip build twine
+          python -m pip install --upgrade build twine
 
-      - name: Build distributions
-        run: |
-          python -m build --sdist --wheel
+      - name: Build dist
+        run: python -m build
 
       - name: Publish to PyPI
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: |
-          python -m twine upload dist/*
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: python -m twine upload dist/*
