--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,38 @@
-# .github/workflows/ci.yml
 name: CI
+on: [push, pull_request]
 
-on:
-  push:
-    branches: [main]
-  pull_request:
+permissions:
+  contents: read      # необходимо checkout'у
+  actions: read
+  # tests не требуют больше разрешений
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10, 3.11, 3.12]
+        python-version: ["3.10", "3.11", "3.12"]
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4        # последняя версия
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+    - uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: pip
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
+    - name: Install deps
+      run: |
+        python -m pip install -U pip
+        pip install .[dev]
 
-      - name: Run tests
-        run: pytest --basetemp=.pytest_temp -q
+    - name: Run tests
+      run: pytest
 
-      # Если хотите сохранить артефакты (coverage XML, логи и т.п.):
-      - name: Upload test artifacts
-        if: failure()   # только при падении
-        uses: actions/upload-artifact@v3
-        with:
-          name: pytest-temp
-          path: .pytest_temp
+    # 👉 artefacts
+    - name: Upload coverage
+      uses: actions/upload-artifact@v4   # ← вместо @v3
+      with:
+        name: coverage-html
+        path: htmlcov/
+        if-no-files-found: ignore
