--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,35 @@
 name: Publish
-
 on:
   push:
     tags:
-      - 'v*'          # срабатывает только на теги
+      - 'v*'
 
 permissions:
   contents: read
-  id-token: write     # нужен для trusted‑publisher (если настроен)
-  # OR packages: write  # если используем PyPI‑token
+  packages: write
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Setup Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Build dist
-      run: |
-        python -m pip install -U pip build
-        python -m build
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip build
 
-    - name: Publish to PyPI
-      # ====== вариант 1 — Trusted Publisher ======
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        # если репозиторий уже привязан к PyPI как «trusted publisher»
-        skip-existing: true
+      - name: Build distributions
+        run: python -m build
 
-      # ====== ИЛИ вариант 2 — старый PyPI‑token ======
-      # uses: pypa/gh-action-pypi-publish@release/v1
-      # with:
-      #   password: ${{ secrets.PYPI_API_TOKEN }}
-      #   skip-existing: true
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          skip-existing: true
