--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zilant-prime-core"
-version = "0.1.4"               # <-- не забыть обновить сюда вашу новую версию
+version = "0.1.4"              # <-- сюда вашу новую версию
 description = "Core engine for ZILANT Prime™"
 readme = "README.md"
 license = { text = "MIT" }
 authors = [{ name = "QuantumKeyUYU" }]
-keywords = ["crypto", "vdf", "aead", "kdf"]
 dependencies = [
   "cryptography>=42,<43",
   "argon2-cffi>=23.1,<24",
