--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zilant-prime-core"
-version = "0.1.4"
+version = "0.1.3"
 description = "Core library for Zilant-Prime cryptographic container and VDF tooling"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -18,9 +18,9 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 dependencies = [
-  "cryptography>=3.4",
-  "hypothesis>=6.0",
-  "click>=8.0"
+  "cryptography>=42.0.0,<43.0.0",
+  "argon2-cffi>=23.1.0,<24.0.0",
+  "click>=8.1.0,<9.0.0"
 ]
 
 [project.urls]
@@ -29,15 +29,16 @@ Repository = "https://github.com/QuantumKeyUYU/zilant-prime-core"
 
 [project.optional-dependencies]
 dev = [
-  "pytest>=7.0",
-  "twine>=4.0",
+  "pytest>=8.0.0,<9.0.0",
+  "pytest-cov>=5.0.0,<6.0.0",
+  "twine>=4.0.0",
 ]
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.setuptools]
-package-dir = {"" = "src"}
+package-dir = { "" = "src" }
 
 [tool.setuptools.entry-points."console_scripts"]
-zil = "zilant_prime_core.cli:main"
+zil = "zilant_prime_core.cli:cli"
