--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,44 +1,33 @@
-﻿[build-system]
+[build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "zilant-prime-core"
-version = "0.1.3"
-description = "Core library for Zilant-Prime cryptographic container and VDF tooling"
+version = "0.1.4"
+description = "Core primitives for Zilant Prime: AEAD, KDF, VDF and CLI tools"
 readme = "README.md"
-license = { file = "LICENSE" }
+requires-python = ">=3.10"
+license = { text = "MIT" }
+
 authors = [
-  { name = "QuantumKeyUYU", email = "you@example.com" }
+  { name = "QuantumKeyUYU", email = "your.email@example.com" }
 ]
-keywords = ["cryptography","vdf","container"]
+
+dependencies = [
+  "click>=8.0",
+  "cryptography>=36.0.0"
+]
+
+keywords = ["cryptography", "vdf", "kdf", "aead", "zilant"]
+
 classifiers = [
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: MIT License",
-  "Operating System :: OS Independent"
-]
-dependencies = [
-  "cryptography>=42.0.0,<43.0.0",
-  "argon2-cffi>=23.1.0,<24.0.0",
-  "click>=8.1.0,<9.0.0"
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "License :: OSI Approved :: MIT License"
 ]
 
 [project.urls]
-Homepage = "https://github.com/QuantumKeyUYU/zilant-prime-core"
-Repository = "https://github.com/QuantumKeyUYU/zilant-prime-core"
-
-[project.optional-dependencies]
-dev = [
-  "pytest>=8.0.0,<9.0.0",
-  "pytest-cov>=5.0.0,<6.0.0",
-  "twine>=4.0.0",
-]
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
-[tool.setuptools]
-package-dir = { "" = "src" }
-
-[tool.setuptools.entry-points."console_scripts"]
-zil = "zilant_prime_core.cli:cli"
+"Homepage"   = "https://github.com/QuantumKeyUYU/zilant-prime-core"
+"Repository" = "https://github.com/QuantumKeyUYU/zilant-prime-core"
