--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ authors = [
 
 dependencies = [
   "click>=8.0",
-  "cryptography>=36.0.0"
+  "cryptography>=36.0.0",
+  "pytest>=7.0"          # ← вот эта строка
 ]
 
 keywords = ["cryptography", "vdf", "kdf", "aead", "zilant"]
