--- a/pytest.ini
+++ b/pytest.ini
@@ -1,20 +1,37 @@
 [pytest]
-# Где искать тесты
-testpaths = tests
+# ── где искать тесты ───────────────────────────────────────────────
+testpaths =
+    tests
 
-# Подключаем src/ в PYTHONPATH, чтобы "import zilant_prime_core" работал
-pythonpath = src
+# чтобы `import zilant_prime_core` видел src/
+pythonpath =
+    src
 
-# Опции запуска:
-#  - измеряем покрытие пакета zilant_prime_core
-#  - показываем пропущённые строки
-#  - тихий режим (-q) + вывод print/отладочной информации (-s)
-addopts = 
-    --cov=zilant_prime_core 
-    --cov-report=term-missing 
-    -q 
-    -s
+# ── глобальные опции запуска ───────────────────────────────────────
+addopts =
+    -ra                     # короткий summary ошибок (r), пропусков (a)
+    -q                      # quiet: только прогресс‑бар
+    -s                      # оставляем print/лог вывода
+    --durations=10          # 10 самых медленных тестов
+    --strict-markers        # неисп. маркеры => ошибка
+    --cov=zilant_prime_core # измеряем покрытие пакета
+    --cov-report=term-missing:skip-covered
+    --cov-report=xml        # нужен для CI badge / Sonar / Codecov
+    --cov-report=html       # красивый html‑отчёт (ложится в htmlcov/)
 
-# Подавляем предупреждения о неизвестных опциях
+# ── кастомные маркеры (документация + strict‑check) ────────────────
+markers =
+    slow:       помечает долгие тесты (–m "not slow" чтобы пропустить)
+    integration:интеграционные (работают с диском / сетью и т.д.)
+    property:   property‑based tests (hypothesis)
+
+# ── фильтры предупреждений ─────────────────────────────────────────
 filterwarnings =
-    ignore::pytest.PytestConfigWarning
+    ignore::pytest.PytestConfigWarning          # тишина по «неизвестным» маркерам
+    ignore:pkg_resources is deprecated:DeprecationWarning
+
+# ── плагин pytest‑cov пишет html в htmlcov/ – добавим в arifacts ───
+[coverage:run]
+branch = True
+parallel = True
+source = zilant_prime_core
