--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,86 @@
 name: CI
+
 on:
   push:
     branches: [main]
+    tags:     ["v*"]
   pull_request:
-    branches: [main]
-
-permissions:
-  contents: read
-  actions: read
+  workflow_dispatch:
 
 jobs:
-  build-and-test:
+  # ─────────────────────────────────────────────────────────────────
+  lint:
+    name: Ruff / Black
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+        cache: pip
+
+    - run: |
+        python -m pip install --upgrade pip
+        pip install ruff black
+
+    - name: ruff (code + tests)
+      run: ruff check src tests
+
+    - name: black (check‑only)
+      run: black --check src tests
+
+  # ─────────────────────────────────────────────────────────────────
+  test:
+    name: Tests (py${{ matrix.python }})
+    needs: lint
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
+        python: ["3.10", "3.11", "3.12"]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
+    - uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python }}
+        cache: pip
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
+    - name: Install project (+ dev deps)
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e .[dev]
 
-      - name: Run tests
-        run: pytest -q
+    - name: Run tests
+      run: pytest
 
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: htmlcov/
-          if-no-files-found: ignore
+    - name: Upload coverage html
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-html-py${{ matrix.python }}
+        path: htmlcov
+        retention-days: 7
+
+  # ─────────────────────────────────────────────────────────────────
+  build-wheel:
+    name: Build wheel & sdist
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+        cache: pip
+    - run: |
+        python -m pip install --upgrade pip build
+        python -m build --sdist --wheel --outdir dist/
+    - uses: actions/upload-artifact@v4
+      with:
+        name: dist
+        path: dist/*
+        retention-days: 7
