feat: sync with local improvements and updates (up-to-date core, tests, docs, new features)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,36 +1,30 @@
 [pytest]
-# ── где искать тесты ───────────────────────────────────────────────
 testpaths =
     tests
 
-# чтобы `import zilant_prime_core` видел src/
 pythonpath =
     src
 
-# ── глобальные опции запуска ───────────────────────────────────────
 addopts =
-    -ra                     # короткий summary ошибок (r), пропусков (a)
-    -q                      # quiet: только прогресс‑бар
-    -s                      # оставляем print/лог вывода
-    --durations=10          # 10 самых медленных тестов
-    --strict-markers        # неисп. маркеры => ошибка
-    --cov=zilant_prime_core # измеряем покрытие пакета
+    -ra
+    -q
+    -s
+    --durations=10
+    --strict-markers
+    --cov=zilant_prime_core
     --cov-report=term-missing:skip-covered
-    --cov-report=xml        # нужен для CI badge / Sonar / Codecov
-    --cov-report=html       # красивый html‑отчёт (ложится в htmlcov/)
+    --cov-report=xml
+    --cov-report=html
 
-# ── кастомные маркеры (документация + strict‑check) ────────────────
 markers =
     slow:       помечает долгие тесты (–m "not slow" чтобы пропустить)
     integration:интеграционные (работают с диском / сетью и т.д.)
     property:   property‑based tests (hypothesis)
 
-# ── фильтры предупреждений ─────────────────────────────────────────
 filterwarnings =
-    ignore::pytest.PytestConfigWarning          # тишина по «неизвестным» маркерам
+    ignore::pytest.PytestConfigWarning
     ignore:pkg_resources is deprecated:DeprecationWarning
 
-# ── плагин pytest‑cov пишет html в htmlcov/ – добавим в arifacts ───
 [coverage:run]
 branch = True
 parallel = True
