--- a/ruff.toml
+++ b/ruff.toml
@@ -1,7 +1,17 @@
-# ruff.toml
+# .ruff.toml
 
-# Выбираем правила, которые хотим проверять и автоматически исправлять
-select = ["F401", "E402", "E261", "E262"]
+[tool.ruff]
+# Максимальная длина строки, версия Python
+line-length = 100
+target-version = "py310"
 
-# Разрешаем фиксить именно эти
-fixable = ["F401", "E402", "E261", "E262"]
+# ─── Основные правила ───────────────────────────────────
+[tool.ruff.lint]
+# Какие категории ошибок мы хотим ловить
+select = ["E", "F", "I", "N", "B"]
+# (не обязательно фиксабельные – отключаем только в тестах)
+
+# ─── Исключения для тестов ───────────────────────────────
+[tool.ruff.per-file-ignores]
+# во всех файлах tests/*.py не считать ошибкой «unused import»
+"tests/*.py" = ["F401"]
