--- a/ruff.toml
+++ b/ruff.toml
@@ -1,17 +1,12 @@
-# .ruff.toml
+# ruff.toml — плоская конфигурация для Ruff
 
-[tool.ruff]
-# Максимальная длина строки, версия Python
+# длина строки и версия Python
 line-length = 100
 target-version = "py310"
 
-# ─── Основные правила ───────────────────────────────────
-[tool.ruff.lint]
-# Какие категории ошибок мы хотим ловить
+# какие категории проверять
 select = ["E", "F", "I", "N", "B"]
-# (не обязательно фиксабельные – отключаем только в тестах)
 
-# ─── Исключения для тестов ───────────────────────────────
-[tool.ruff.per-file-ignores]
-# во всех файлах tests/*.py не считать ошибкой «unused import»
+# индивидуальные игнор-правила для файлов
+[per-file-ignores]
 "tests/*.py" = ["F401"]
