--- a/ruff.toml
+++ b/ruff.toml
@@ -1,12 +1,27 @@
-# ruff.toml — плоская конфигурация для Ruff
+# ruff.toml — конфигурация для Ruff 0.4+
 
-# длина строки и версия Python
 line-length = 100
 target-version = "py310"
 
-# какие категории проверять
+[lint]
+# базовые категории (ошибки, баги, импорт, имена, best-practices)
 select = ["E", "F", "I", "N", "B"]
 
-# индивидуальные игнор-правила для файлов
-[per-file-ignores]
-"tests/*.py" = ["F401"]
+# отключаем «шумные» правила глобально
+ignore = [
+  "I001",  # порядок импортов
+  "B904",  # raise from err
+  "N802",  # snake_case имена функций
+]
+
+# ── тесты ───────────────────────────────────────────────
+[lint.per-file-ignores]
+"tests/*.py" = [
+  # в тестах игнорируем:
+  "F401",  # unused import
+  "F841",  # unused variable
+  "I001",  # порядок импортов
+  "E501",  # длина строки
+  "E702",  # несколько stmt на строке
+  "B904",  # raise-from
+]
