--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,6 @@
+﻿\
+# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+# SPDX-License-Identifier: MIT
 # requirements-dev.txt
 pytest>=8.0.0
 pytest-cov>=5.0.0
